--- a/JavaScript/imooc-demo/JS-Animation-Effect/css/style.css
+++ b/JavaScript/imooc-demo/JS-Animation-Effect/css/style.css
@@ -19,3 +19,26 @@ div {
     text-align: center;
     line-height: 100px;
 }
+
+#opacity {
+    filter: alpha(opacity=30);
+    opacity: 0.3;
+}
+
+#mutli {
+    line-height: 35px;
+}
+
+#mutli ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+
+#mutli ul li {
+    background-color: antiquewhite;
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    border-radius: 25px;
+}
