11.修复鼠标在导航栏最右边时会无限触发over效果的bug,并且隐藏详情布局

--- a/JavaScript/my-own-imitation-demo/tmall-nav/css/style.css
+++ b/JavaScript/my-own-imitation-demo/tmall-nav/css/style.css
@@ -69,6 +69,8 @@
     background-color: #F9F9F9;
     display: flex;
     border-top: 3px solid #fc0f3d;
+    padding-left: 1px;
+    visibility: hidden;
 }
 
 .left-contents {
