11.修补循环选中导航的bug

--- a/JavaScript/my-own-imitation-demo/tmall-nav/css/style.css
+++ b/JavaScript/my-own-imitation-demo/tmall-nav/css/style.css
@@ -66,9 +66,10 @@
     margin-top: 97px;
     height: 495px;
     width: 850px;
-    background-color: #F9F9F9;
     display: flex;
     border-top: 3px solid #fc0f3d;
+    padding-left: 1px;
+    visibility: hidden;
 }
 
 .left-contents {
@@ -147,6 +148,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    background-color: #F9F9F9;
 }
 
 .brand {
